Corrected Form Borders and Header Text Alignment

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -26,6 +26,7 @@
   line-height: 30px;
   border-radius: 4px;
   border-color: #838383;
+  border-width: 1px;
   margin: 0 0 32px;
   height: 60px;
   max-width: 385px;
@@ -40,7 +41,7 @@
   color: #ffffff;
   font-weight: 500;
   border-radius: 4px;
-  border-color: #2f80ed;
+  border: none;
   padding: 0;
   opacity: 1;
   cursor: pointer;
