--- a/blocks/header.css
+++ b/blocks/header.css
@@ -55,6 +55,7 @@
   justify-content: space-between;
   margin-top: auto;
   z-index: 1;
+  align-items: end;
 }
 
 .header__paragraph {
